fix logo padding on mobile

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -65,11 +65,12 @@ body {
     color:white; 
     padding:0 20px;
 }
-.logo {
+.header .logo {
     display: flex;
     align-items: center;
     cursor: pointer;
     margin: 17px 0;
+    padding: 0;
 }
 .logoimg {
     cursor: pointer;
